Speaker WUD functions complete
Finished writing API functions for writing updating and deleting speakers
